# GovTECH

./: mkdocs.yml  pyproject.toml
.github/workflows/: pages.yml
docs/: architektur.en.md  architektur.fr.md  architektur.it.md  architektur.md  ausblick.en.md  ausblick.fr.md  ausblick.it.md  ausblick.md  challenge.en.md  challenge.fr.md  challenge.it.md  challenge.md  datenquellen.en.md  datenquellen.fr.md  datenquellen.it.md  datenquellen.md  index.en.md  index.fr.md  index.it.md  index.md  kontakt.en.md  kontakt.fr.md  kontakt.it.md  kontakt.md  mvp-deliverables.en.md  mvp-deliverables.fr.md  mvp-deliverables.it.md  mvp-deliverables.md  problem-zielgruppe.en.md  problem-zielgruppe.fr.md  problem-zielgruppe.it.md  problem-zielgruppe.md  teilnahme-rahmenbedingungen.en.md  teilnahme-rahmenbedingungen.fr.md  teilnahme-rahmenbedingungen.it.md  teilnahme-rahmenbedingungen.md
docs/stylesheets/: extra.css
