[project]
name = "strategic-radar-x12-docs"
version = "0.1.0"
description = "MkDocs-Microsite fuer die GovTech-Hackathon-Challenge Strategic Radar x+12."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs>=1.6,<2.0",
    "mkdocs-material>=9.6,<10.0",
    "mkdocs-static-i18n>=1.3,<2.0",
    "pymdown-extensions>=10.14,<11.0",
]

[tool.uv]
package = false
